Refactor index.html for improved structure and styling

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="sr" style="color-scheme: light only;">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="color-scheme" content="light only">
     <title>UNDER CONSTRUCTION - RADOVI U TOKU</title>
-	<link rel="icon" type="image/x-icon" href="work-in-progress-icon.jpg">
+	<link rel="icon" type="image/x-icon" href="/work-in-progress-icon.jpg">
     </head>
 
-<body><br><br><br><br>
-<div align="center">
+<body style="background-color: white !important; color: black !important;">
+    <br><br><br><br>
+    <div align="center">
 	<table border="0" width="905" cellspacing="0" cellpadding="0">
-		<tr>
+		 <tr>
 			<td>
-			<img border="0" src="images/radovi u toku.jpg" width="905" height="550"></td>
+			<img border="0" src="images/radovi-u-toku.jpg" width="905" height="550"></td>
 		</tr>
 	</table>
-</div>
-
+    </div>
 </body>
-
 </html>
