Fix HTML structure and add div styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color: white !important; color: black !important;">
     <br><br><br><br>
-    <div align="center">
+    <div style="background-color: white !important; color: black !important;" align="center">
 	<table border="0" width="905" cellspacing="0" cellpadding="0">
 		 <tr>
 			<td>
@@ -19,3 +19,4 @@
     </div>
 </body>
 </html>
+
