Fix table style in index.html
Added missing style attribute to the table element.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="background-color: white !important; color: black !important;">
     <br><br><br><br>
     <div style="background-color: white !important; color: black !important;" align="center">
-	<table border="0" width="905" cellspacing="0" cellpadding="0">
+	<table style="background-color: white !important; color: black !important" border="0" width="905" cellspacing="0" cellpadding="0">
 		 <tr>
 			<td>
 			<img border="0" src="images/radovi-u-toku.jpg" width="905" height="550"></td>
@@ -19,4 +19,5 @@
     </div>
 </body>
 </html>
+
 
