--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color: white !important; color: black !important;">
     <br><br><br><br>
-    <div style="background-color: white !important; color: black !important;" align="center">
+    <div style="background-color: #f0f0f0 !important; padding: 20px;" align="center">
 	<table style="background-color: white !important; color: black !important" border="0" width="905" cellspacing="0" cellpadding="0">
 		 <tr>
 			<td>
@@ -19,5 +19,6 @@
     </div>
 </body>
 </html>
+
 
 
