--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body style="background-color: white !important; color: black !important;">
     <br><br><br><br>
-    <div style="background-color: #ffffff !important; color: #333333 !important; padding: 20px; overflow-x: auto;" align="center">
+    <div style="overflow-x: auto;" align="center">
 	<table style="background-color: white !important; color: black !important" border="0" width="905" cellspacing="0" cellpadding="0">
 		 <tr>
 			<td>
-			<img border="0" src="images/radovi-u-toku.jpg" style="max-width: 100%; height: auto;"></td>
+			<img src="images/radovi-u-toku.jpg" style="max-width: 100%; height: auto;"></td>
 		</tr>
 	</table>
     </div>
@@ -22,3 +22,4 @@
 	<br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
+
