--- a/index.html
+++ b/index.html
@@ -1,25 +1,98 @@
 <!DOCTYPE html>
-<html lang="sr" style="color-scheme: light only;">
+<html lang="sr">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="color-scheme" content="light only">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" href="images/work-in-progress-icon.png">
     <title>UNDER CONSTRUCTION - RADOVI U TOKU</title>
-	<link rel="icon" type="image/x-icon" href="/work-in-progress-icon.jpg">
-    </head>
 
-<body style="background-color: white !important; color: black !important;">
-    <br><br><br><br>
-    <div style="overflow-x: auto;" align="center">
-	<table style="background-color: white !important; color: black !important" border="0" width="905" cellspacing="0" cellpadding="0">
-		 <tr>
-			<td>
-			<img src="images/radovi-u-toku.jpg" style="max-width: 100%; height: auto;"></td>
-		</tr>
-	</table>
+    <style>
+        /*
+         * GLOBALNI STILOVI I RESETOVANJE
+         */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0; /* Uklanja podrazumevanu marginu pregledača */
+            padding: 20px; /* Dodaje malo prostora oko sadržaja */
+            background-color: #ffffff;
+            text-align: center; /* Centriranje teksta na stranici */
+        }
+
+        /*
+         * STILOVI ZA KONTEJNERE I RESPOZIVNOST
+         */
+        .content-container {
+            max-width: 900px; /* Maksimalna širina centralnog bloka sadržaja */
+            margin: 0 auto; /* Automatsko centriranje kontejnera na stranici */
+            padding: 0 10px;
+        }
+
+        /*
+         * STILOVI ZA SLIKU
+         */
+        .responsive-image {
+            max-width: 100%; /* Osigurava da slika nikada ne bude šira od svog roditelja */
+            height: auto; /* Održava proporcije slike */
+            display: block; /* Uklanja podrazumevani prazan prostor ispod slike */
+            margin: 20px auto; /* Centriranje slike i dodavanje margina gore/dole */
+            border-radius: 8px; /* Mali zaobljeni uglovi */
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Blaga senka */
+        }
+
+        /*
+         * STILOVI ZA VIDEO
+         */
+        .video-container {
+            position: relative;
+            width: 100%;
+            /* Proporcija 16:9 za video */
+            padding-bottom: 56.25%; /* Računa se kao (9 / 16) * 100% */
+            height: 0;
+            margin: 20px auto; /* Centriranje i margina */
+            overflow: hidden; /* Skriva delove koji prelaze */
+            max-width: 800px; /* Ograničava maksimalnu širinu videa */
+        }
+
+        .responsive-video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 8px; /* Mali zaobljeni uglovi za video */
+        }
+
+        /*
+         * STILOVI ZA FOOTER
+         */
+        .footer {
+            margin-top: 40px; /* Odmak od sadržaja iznad */
+            padding: 10px 0;
+            border-top: 1px solid #ccc; /* Linija iznad futera */
+            color: #666;
+            font-size: 0.9em;
+            text-align: center; /* Centriranje teksta u futeru */
+        }
+    </style>
+</head>
+<body>
+
+    <div class="content-container">
+	
+        <img src="images/radovi-u-toku.jpg" alt="Radovi u toku - majstorica" class="responsive-image">
+
+        <div class="video-container">
+            <video controls class="responsive-video">
+                <source src="video/radovi-u-toku.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+
     </div>
-	<br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <footer class="footer">
+        <p>1generalsky.github.io 2025</p>
+    </footer>
+
 </body>
 </html>
-
