Fix HTML structure and add light color scheme

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sr">
+<html lang="sr" style="color-scheme: light only;>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -96,4 +96,5 @@
 
 </body>
 </html>
+
 
