Fix HTML formatting and style attributes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: white !important; color: black !important;">
 
     <div class="content-container">
 	
@@ -96,5 +96,6 @@
 
 </body>
 </html>
+
 
 
