Add color-scheme meta tag to HTML head
Added color-scheme meta tag for improved styling.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="sr" style="color-scheme: light only;>
 <head>
     <meta charset="UTF-8">
+	<meta name="color-scheme" content="light only">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="images/work-in-progress-icon.png">
     <title>UNDER CONSTRUCTION - RADOVI U TOKU</title>
@@ -96,6 +97,7 @@
 
 </body>
 </html>
+
 
 
 
