Refactor index.html for improved structure and styles
Updated HTML structure and styles for better responsiveness and clarity.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="sr" style="color-scheme: light only;>
+<html lang="sr" style="color-scheme: light;>
 <head>
     <meta charset="UTF-8">
-	<meta name="color-scheme" content="light only">
+	<meta name="color-scheme" content="light">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="images/work-in-progress-icon.png">
     <title>UNDER CONSTRUCTION - RADOVI U TOKU</title>
@@ -17,6 +17,7 @@
             padding: 20px; /* Dodaje malo prostora oko sadržaja */
             background-color: #ffffff;
             text-align: center; /* Centriranje teksta na stranici */
+			:root { color-scheme: light; }
         }
 
         /*
@@ -97,6 +98,7 @@
 
 </body>
 </html>
+
 
 
 
