--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sr" style="color-scheme: light;>
+<html lang="sr" style="color-scheme: light;">
 <head>
     <meta charset="UTF-8">
 	<meta name="color-scheme" content="light">
@@ -98,6 +98,7 @@
 
 </body>
 </html>
+
 
 
 
